Latex'ified a couple params

--- a/project/titanic.ipynb
+++ b/project/titanic.ipynb
@@ -34,16 +34,16 @@
       "\n",
       "As stated in the introductions, the data set given is missing entries for a few values. This requires a small amout of preprocessing to give these missing entries values which make sense. Once we are done with this initial preprocessing, we will be learning using a few different algorithms to see which gives us the best accuracy. A few algorithms which seem like a natural fit include nearest neighbor, support vector machines and decision trees. We will be using Python3 as the main language to build all of the models. Within Python, we will be using Matplotlib, Numpy, Pandas and Scikit-learn. \n",
       "\n",
-      "The algorithms that we will be using require the tuning of parameters, that is, finding which parameter values yield the highest accuracies. For the decision tree, we will be looking at things like impurity measurement. There are a few ways of measuring the impurity when using decision trees (information gain, Gini index etc). Finding the best impurity measurement is very important because it will determine how our algorithm traverses the decision tree. Other parameters include maximum depth of the decision tree which can be important considering the size of the data set. The support vectors machines would require piking a good kernel and tuning the parameters of that kernel. For instance, if we were to use the RBF kernel, we would need to optimize the regularization constant C and the parameter gamma (we did this as an exercise in homework assignment 3). As for nearest neighbors, we would only need to really tune k, the size of the \"net\" we will be using to determine whether a passenger survived or not. Using different distance metrics may be something to consider as well.\n",
+      "The algorithms that we will be using require the tuning of parameters, that is, finding which parameter values yield the highest accuracies. For the decision tree, we will be looking at things like impurity measurement. There are a few ways of measuring the impurity when using decision trees (information gain, Gini index etc). Finding the best impurity measurement is very important because it will determine how our algorithm traverses the decision tree. Other parameters include maximum depth of the decision tree which can be important considering the size of the data set. The support vectors machines would require piking a good kernel and tuning the parameters of that kernel. For instance, if we were to use the RBF kernel, we would need to optimize the regularization constant $C$ and the parameter $\\gamma$ (we did this as an exercise in homework assignment 3). As for nearest neighbors, we would only need to really tune $k$, the size of the \"net\" we will be using to determine whether a passenger survived or not. Using different distance metrics may be something to consider as well.\n",
       "\n",
-      "We plan on gathering a bit of meta information about all the features, such as average, minimum, and maximum, if applicable. This will allow us to better tune the parameters for our algorithms. We will then start experimenting with the training set by running them through our algorithms with their tuned parameters. We will try different ways of training and testing, using both the full sets and cross-validation as well. Although the data set isn't very big, the time it will take to run these experiments may grow to be very large, especially for the svm's. However we are using tools which are known to be relatively efficient in this area.\n",
+      "We plan on gathering a bit of meta information about all the features, such as average, minimum, and maximum, if applicable. This will allow us to better tune the parameters for our algorithms. We will then start experimenting with the training set by running them through our algorithms with their tuned parameters. We will try different ways of training and testing, using both the full sets and cross-validation as well. Although the data set isn't very big, the time it will take to run these experiments may grow to be very large, especially for the SVM's. However we are using tools which are known to be relatively efficient in this area.\n",
       "\n",
       "Our goal is to develop a predictor for survival in the Titanic disaster. Since\n",
       "what we are trying to predict is the group an observation in the dataset belongs\n",
       "to, we are solving a classification problem. We have selected a subset of classifiers\n",
       "we are using to examine this dataset, including the suggested decision trees, and a\n",
       "random forest. Additionally, we are training a Support Vector Machine to predict survival.\n",
-      "Should time permit, we would like to try using k-Nearest Neighbors on a subset of of\n",
+      "Should time permit, we would like to try using $k$-Nearest Neighbors on a subset of of\n",
       "features to see how it compares.\n",
       "\n",
       "The natural thought we had when selecting features follows the etiquitte of abandoning ship\n",
@@ -620,7 +620,7 @@
      "metadata": {},
      "source": [
       "### Using Support Vector Machines\n",
-      "We will perform a grid search over our parameters for the SVM, executing a series of trials in which we tune the cost, gamma, and kernel to use in in our SVM."
+      "We will perform a grid search over our parameters for the SVM, executing a series of trials in which we tune the cost $C$, the kernel parameter $\\gamma$, and kernel to use in in our SVM."
      ]
     },
     {
