Added more analysis with decision tree

--- a/project/titanic.ipynb
+++ b/project/titanic.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:604ff97872ae8599d09b6f0d9e947b380f7991f6614748bb2e814903d8edccd7"
+  "signature": "sha256:3335a7e2fcf67287ca046240957acb8fc4d68256b4e1af784a5b5389432092e7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -241,7 +241,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 54,
+       "prompt_number": 2,
        "text": [
         "             Survived  Pclass  \\\n",
         "PassengerId                     \n",
@@ -277,14 +277,16 @@
        ]
       }
      ],
-     "prompt_number": 54
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "### Comparing Survivor and Perisher Data\n",
-      "Before we begin implementing any learning methods, it is helpful to calculate some general statistics about our data and begin to plot and visualize the features. In particular, we want to inspect information about the features we instinctively feel have an influence in the outcome, such as the age and gender of the passenger."
+      "Before we begin implementing any learning methods, it is helpful to calculate some general statistics about our data and begin to plot and visualize the features. In particular, we want to inspect information about the features we instinctively feel have an influence in the outcome, such as the age and gender of the passenger.\n",
+      "\n",
+      "First, we will calculate the mean age of survivors and perishers, and plot a histogram of the age distribution, separated by whether they lived or perished."
      ]
     },
     {
@@ -691,6 +693,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "By gradually sliding the window of possible values to perform grid search over, we can tune the cost $C$ and kernel paramter $\\gamma$. We also tried both linear and rbf kernels, and found that rbf achieved higher accuracy. The values grid search finally selected were\n",
+      "$$ C = 1.5 $$\n",
+      "$$ \\gamma = 0.01 $$\n",
+      "$$ kernel = rbf $$\n",
+      "which were able to an estimated 77% accuracy on a test set, which was separated from the original training set at a ratio of 0.75 examples used for training and the remaining 25% used for testing.\n",
+      "\n",
       "### Building a Decision Tree\n",
       "We also built a decision tree using the features: Pclass, Age, Gender, Fare and Port."
      ]
@@ -702,21 +710,61 @@
       "from sklearn import tree\n",
       "\n",
       "# Separate observations and target\n",
-      "#X = df.copy()\n",
-      "X = train['examples'][['Pclass', 'AgeFixed', 'Gender', 'Fare']]\n",
-      "y = train['target']\n",
-      "decision_tree = tree.DecisionTreeClassifier()\n",
-      "decision_tree = decision_tree.fit(X, y)"
+      "X = df[['Pclass', 'AgeFixed', 'Gender']]\n",
+      "y = df['Survived']\n",
+      "training, testing = analysis.split_dataset(X, y)\n",
+      "\n",
+      "params = {'max_depth': [2, 3, 4, None], 'max_features' : [2, 3, None]}\n",
+      "decision_tree = analysis.build_decision_tree(training['examples'], training['target'], params)\n",
+      "print(\"Decision tree on Pclass, AgeFixed, and Gender\")\n",
+      "print(decision_tree.score(testing['examples'], testing['target']))\n",
+      "\n",
+      "# Again, this time with Fare and Port\n",
+      "X = df[['Pclass', 'AgeFixed', 'Gender', 'Fare', 'Port']]\n",
+      "y = df['Survived']\n",
+      "training, testing = analysis.split_dataset(X, y)\n",
+      "\n",
+      "params = {'max_depth': [2, 3, 4, None], 'max_features' : [2, 3, None]}\n",
+      "decision_tree = analysis.build_decision_tree(training['examples'], training['target'], params)\n",
+      "print(\"Decision tree on Pclass, AgeFixed, Gender, Fare, and Port\")\n",
+      "print(decision_tree.score(testing['examples'], testing['target']))"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 56
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Resulting Grid Search Params:  {'max_depth': 2, 'max_features': 2}\n",
+        "Decision tree on Pclass, AgeFixed, and Gender\n",
+        "0.784431137725\n",
+        "Resulting Grid Search Params: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " {'max_depth': 3, 'max_features': 3}\n",
+        "Decision tree on Pclass, AgeFixed, Gender, Fare, and Port\n",
+        "0.820359281437\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Similarly to building Support Vector Machines, we performed a grid search over possible parameters when building the decision tree, including the maximum depth ofthe tree and the maximum number of features to incorporate. We executed the grid search twice, once on the features Pclass, AgeFixed, and Gender, and then again after adding Fare and Port to the features.\n",
+      "\n",
+      "| Trial | Max Depth | Max Features | Accuracy |\n",
+      "|:------|-----------|--------------|----------|\n",
+      "|   1   | 2         | 2            | 78.44%   |\n",
+      "|   2   | 3         | 3            | 82.04%   |\n",
+      "\n",
       "## Results and Conclusion\n",
       "\n",
       "###Results from Decision Tree Classification\n",
